--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,136 +16,32 @@
         android:scaleType="centerCrop"
         android:src="@drawable/shape_rectangle" />
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/header" />
+
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/header">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@color/colorRectangle" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/location_icon"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:src="@drawable/white_location_icon" />
-
-                <TextView
-                    android:id="@+id/city_name"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/location_icon"
-                    android:ellipsize="marquee"
-                    android:fontFamily="casual"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:maxLines="1"
-                    android:paddingTop="10dp"
-                    android:scrollHorizontally="true"
-                    android:singleLine="true"
-                    android:text="@string/nama_kota_example"
-                    android:textColor="@android:color/white"
-                    android:textSize="30sp" />
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/icon_weather_now"
-                    android:layout_width="260dp"
-                    android:layout_height="260dp"
-                    android:layout_centerHorizontal="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/weather_01d" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/temp_now"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/temp_now_example"
-                        android:textColor="@android:color/white"
-                        android:textSize="28sp" />
-
-                    <TextView
-                        android:id="@+id/desc_now"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/desc_now_example"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp" />
-                </LinearLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="30dp">
-
-                <TextView
-                    android:id="@+id/text_by_hour"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="By 3 Hour"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view_today"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/text_by_hour"
-                    android:background="@drawable/shape_rectangle_2"
-                    android:scrollbars="none" />
-            </RelativeLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/text_by_daily"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Daily"
-                    android:textColor="@android:color/white" />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:gravity="center_horizontal">
+                <include layout="@layout/content_temp_now" />
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/recycler_view_day"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/text_by_daily"
-                        android:scrollbars="none" />
-                </LinearLayout>
             </LinearLayout>
+
+            <include layout="@layout/content_hourly" />
+
+            <include layout="@layout/content_daily" />
 
             <LinearLayout
                 android:layout_width="match_parent"
