--- a/app/src/main/res/layout/list_weather.xml
+++ b/app/src/main/res/layout/list_weather.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="20dp">
 
     <TextView
-        android:id="@+id/time_today"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -17,13 +17,13 @@
         android:textColor="@android:color/white" />
 
     <ImageView
-        android:id="@+id/icon_weather_time_today"
+        android:id="@+id/icon_weather"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/weather_01d" />
 
     <TextView
-        android:id="@+id/temp_weather_time_today"
+        android:id="@+id/temp_weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
